--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -30,3 +30,16 @@ jobs:
 
       - name: Build with Maven
         run: mvn -ntp verify
+
+      - if: ${{ github.ref == 'refs/heads/main' }}
+        name: Login to the Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - if: ${{ github.ref == 'refs/heads/main' }}
+        name: Build and Publish Docker Image
+        run: |
+          mvn compile jib:build
+          docker push ${{ secrets.DOCKER_USERNAME }}/bookstore-catalog-service
