Changes in workflows of both services

--- a/.github/workflows/order-service.yml
+++ b/.github/workflows/order-service.yml
@@ -41,5 +41,4 @@ jobs:
       - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Publish Docker Image
         run: |
-          mvn compile jib:build
-          docker push ${{ secrets.DOCKER_USERNAME }}/bookstore-order-service
+          mvn compile jib:build -P order-service
