--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ management.info.git.mode=full
 
 
 ###################ORDER SERVICE #############
-
+orders.catalog-service-url=http://localhost:8081
 orders.order-events-exchange=orders-exchange
 orders.new-orders-queue=new-orders
 orders.delivered-orders-queue=delivered-orders
