--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.shutdown=graceful
 management.endpoints.web.exposure.include=*
 management.info.git.mode=full
 
+orders.publish-order-events-job-cron=*/5 * * * * *
+orders.new-orders-job-cron=*/10 * * * * *
 
 ###################ORDER SERVICE #############
 orders.catalog-service-url=http://localhost:8081
@@ -26,4 +28,3 @@ spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
-
