--- a/deployment/docker-compose/apps.yml
+++ b/deployment/docker-compose/apps.yml
@@ -24,7 +24,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - ORDERS_CATALOG_SERVICE_URL=http://catalog-service:8081
-      - DB_URL=jdbc:postgresql://orders-db:5432/postgres
+      - DB_URL=jdbc:postgresql://order-db:5432/postgres
       - DB_USERNAME=postgres
       - DB_PASSWORD=postgres
       - RABBITMQ_HOST=bookstore-rabbitmq
@@ -35,10 +35,40 @@ services:
       - "8082:8082"
     restart: unless-stopped
     depends_on:
-      orders-db:
+      order-db:
         condition: service_healthy
       bookstore-rabbitmq:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 700m
+    labels:
+      logging: "promtail"
+
+  notification-service:
+    image: saisunny16/bookstore-notification-service
+    container_name: notification-service
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - DB_URL=jdbc:postgresql://notifications-db:5432/postgres
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres
+      - RABBITMQ_HOST=bookstore-rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=guest
+      - RABBITMQ_PASSWORD=guest
+      - MAIL_HOST=mailhog
+    ports:
+      - "8083:8083"
+    restart: unless-stopped
+    depends_on:
+      notifications-db:
+        condition: service_healthy
+      bookstore-rabbitmq:
+        condition: service_healthy
+      mailhog:
+        condition: service_started
     deploy:
       resources:
         limits:
