Added Api gateway, Solved CORS Issues, and dockerized

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>catalog-service</module>
 		<module>order-service</module>
 		<module>notification_service</module>
+		<module>api-gateway</module>
     </modules>
 	<dependencies>
 		<dependency>
