Fixed few erros with the github actions

--- a/.github/workflows/notification-service.yml
+++ b/.github/workflows/notification-service.yml
@@ -5,9 +5,7 @@ on:
     paths:
       - notification_service/**
     branches:
-      - 'main'
-  pull_request:
-    branches: [main]
+      - master
 
 jobs:
   build:
