--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -5,9 +5,7 @@ on:
     paths:
       - api-gateway/**
     branches:
-      - 'main'
-  pull_request:
-    branches: [main]
+        - 'master'
 
 jobs:
   build:
