--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -5,9 +5,7 @@ on:
     paths:
       - catalog-service/**
     branches:
-      - 'main'
-  pull_request:
-    branches: [main]
+      - 'master'
 
 jobs:
   build:
