--- a/.github/workflows/order-service.yml
+++ b/.github/workflows/order-service.yml
@@ -5,9 +5,7 @@ on:
     paths:
       - order-service/**
     branches:
-      - 'main'
-  pull_request:
-    branches: [main]
+      - 'master'
 
 jobs:
   build:
