--- a/.github/workflows/notification-service.yml
+++ b/.github/workflows/notification-service.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Make Maven wrapper executable
         run: chmod +x mvnw
 
+      - name: Apply Code Formatting (Spotless)
+        run: ./mvnw spotless:apply
+
       - name: Build with Maven
         run: ./mvnw -ntp verify
 
