--- a/.github/workflows/order-service.yml
+++ b/.github/workflows/order-service.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Build with Maven
         run: ./mvnw -ntp verify
 
+      - name: Apply Code Formatting (Spotless)
+        run: ./mvnw spotless:apply
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
