Docker Login issues with the lifecycle

--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -44,6 +44,5 @@ jobs:
 
       - name: Build and Publish Docker Image
         run: |
-          ./mvnw spring-boot:build-image api-gateway -DskipTests
-          echo "Pushing the image $DOCKER_IMAGE_NAME to Docker Hub..."
+          ./mvnw spring-boot:build-image -DskipTests
           docker push $DOCKER_IMAGE_NAME
