--- a/.github/workflows/order-service.yml
+++ b/.github/workflows/order-service.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       working-directory: ./order-service
-      DOCKER_IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/bookstore-order-service
+      DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/bookstore-order-service
     defaults:
       run:
         working-directory: ${{ env.working-directory }}
@@ -44,6 +44,5 @@ jobs:
 
       - name: Build and Publish Docker Image
         run: |
-          ./mvnw spring-boot:build-image order-service -DskipTests
-          echo "Pushing the image $DOCKER_IMAGE_NAME to Docker Hub..."
+          ./mvnw spring-boot:build-image -DskipTests
           docker push $DOCKER_IMAGE_NAME
