--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -44,5 +44,4 @@ jobs:
 
       - name: Build and Publish Docker Image
         run: |
-          ./mvnw spring-boot:build-image -DskipTests
-          docker push $DOCKER_IMAGE_NAME
+          ./mvnw spring-boot:build-image
