--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -32,13 +32,13 @@ spring:
             allow-credentials: false
       routes:
         - id: catalog-service
-          uri: ${CATALOG_SERVICE_URL:http://localhost:8081}
+          uri: ${CATALOG_SERVICE_URL}
           predicates:
             - Path=/catalog/**
           filters:
             - RewritePath=/catalog/?(?<segment>.*), /${segment}
         - id: orders-service
-          uri: ${ORDER_SERVICE_URL:http://localhost:8082}
+          uri: ${ORDER_SERVICE_URL}
           predicates:
             - Path=/orders/**
           filters:
