--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -32,13 +32,13 @@ spring:
             allow-credentials: false
       routes:
         - id: catalog-service
-          uri: ${CATALOG_SERVICE_URL}
+          uri: ${CATALOG_SERVICE_URL:http://localhost:8081}
           predicates:
             - Path=/catalog/**
           filters:
             - RewritePath=/catalog/?(?<segment>.*), /${segment}
         - id: orders-service
-          uri: ${ORDER_SERVICE_URL}
+          uri: ${ORDER_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/orders/**
           filters:
@@ -62,4 +62,3 @@ springdoc:
 #        url: /v3/api-docs/catalog
 #      - name: orders
 #        url: /v3/api-docs/orders
-#    test
