--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<module>order-service</module>
 		<module>notification_service</module>
 		<module>api-gateway</module>
+		<module>webapp-bookstore</module>
     </modules>
 	<dependencies>
 		<dependency>
