--- a/deployment/docker-compose/apps.yml
+++ b/deployment/docker-compose/apps.yml
@@ -24,7 +24,7 @@ services:
     container_name: order-service
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - ORDERS_CATALOG_SERVICE_URL=http://api-gateway:8989/catalog
+      - ORDERS_CATALOG_SERVICE_URL=http://catalog-service:8081
       - DB_URL=jdbc:postgresql://order-db:5432/postgres
       - DB_USERNAME=postgres
       - SWAGGER_API_GATEWAY_URL=http://api-gateway:8989/orders
@@ -86,7 +86,23 @@ services:
       - CATALOG_SERVICE_URL=http://catalog-service:8081
       - ORDER_SERVICE_URL=http://order-service:8082
     ports:
-      - "8998:8989"
+      - "8989:8989"
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 700m
+    labels:
+      logging: "promtail"
+
+  webapp-bookstore:
+    image: saisunny16/webapp-bookstore
+    container_name: webapp-bookstore
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - BOOKSTORE_API_GATEWAY_URL=http://localhost:8989
+    ports:
+      - "8000:8000"
     restart: unless-stopped
     deploy:
       resources:
