--- a/deployment/docker-compose/infra.yml
+++ b/deployment/docker-compose/infra.yml
@@ -83,3 +83,18 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.1.0
+    command: [ 'start-dev', '--http-port=9191' ]
+    container_name: keycloak
+    hostname: keycloak
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin1234
+    ports:
+      - "9191:9191"
+    deploy:
+      resources:
+        limits:
+          memory: 2gb
