--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -15,6 +15,12 @@ orders.delivered-orders-queue=delivered-orders
 orders.cancelled-orders-queue=cancelled-orders
 orders.error-orders-queue=error-orders
 
+
+####### OAuth2 Configuration  #########
+OAUTH2_SERVER_URL=http://localhost:9191
+REALM_URL=${OAUTH2_SERVER_URL}/realms/bookstore
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${REALM_URL}
+
 ######  DATABASE
 
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:25432/postgres}
