--- a/webapp-bookstore/src/main/resources/application.properties
+++ b/webapp-bookstore/src/main/resources/application.properties
@@ -4,11 +4,27 @@ server.shutdown=graceful
 spring.mvc.problemdetails.enabled=true
 
 ######## BookStore Application Configuration  #########
-bookstore.api-gateway-url=http://localhost:8989
-
+bookstore.api-catalog-url=http://localhost:8081
+bookstore.api-orders-url=http://localhost:8082
 ######## Actuator Configuration  #########
 management.info.git.mode=full
 management.endpoints.web.exposure.include=*
 management.metrics.tags.application=${spring.application.name}
 management.tracing.enabled=false
 management.tracing.sampling.probability=1.0
+
+######## OAuth2 Security Configuration  #########
+OAUTH2_SERVER_URL=http://localhost:9191
+REALM_URL=${OAUTH2_SERVER_URL}/realms/bookstore
+
+spring.security.oauth2.client.registration.bookstore-webapp.client-id=bookstore-webapp
+spring.security.oauth2.client.registration.bookstore-webapp.client-secret=dJL7rAg2DYCbj6dUL3rt7NAVK8G8Eltm
+spring.security.oauth2.client.registration.bookstore-webapp.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.bookstore-webapp.scope=openid, profile
+spring.security.oauth2.client.registration.bookstore-webapp.redirect-uri={baseUrl}/login/oauth2/code/bookstore-webapp
+
+spring.security.oauth2.client.provider.bookstore-webapp.issuer-uri=${REALM_URL}
+#spring.security.oauth2.client.provider.bookstore-webapp.authorization-uri=${REALM_URL}/protocol/openid-connect/auth
+#spring.security.oauth2.client.provider.bookstore-webapp.token-uri=${REALM_URL}/protocol/openid-connect/token
+#spring.security.oauth2.client.provider.bookstore-webapp.jwk-set-uri=${REALM_URL}/protocol/openid-connect/certs
+#spring.security.oauth2.client.provider.bookstore-webapp.user-info-uri=${REALM_URL}/protocol/openid-connect/userinfo
