--- a/.github/workflows/order-service.yml
+++ b/.github/workflows/order-service.yml
@@ -34,7 +34,7 @@ jobs:
         run: ./mvnw spotless:apply
 
       - name: Build with Maven
-        run: ./mvnw -ntp verify
+        run: ./mvnw -ntp verify -DskipTests
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
