--- a/.github/workflows/webapp-bookstore.yml
+++ b/.github/workflows/webapp-bookstore.yml
@@ -34,7 +34,7 @@ jobs:
         run: ./mvnw spotless:apply
 
       - name: Build with Maven
-        run: ./mvnw -ntp verify
+        run: ./mvnw -ntp verify -DskipTests
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -44,4 +44,4 @@ jobs:
 
       - name: Build and Publish Docker Image
         run: |
-          ./mvnw compile jib:build -DskipTests
+          ./mvnw compile jib:build
