--- a/deployment/docker-compose/infra.yml
+++ b/deployment/docker-compose/infra.yml
@@ -84,17 +84,46 @@ services:
       - "1025:1025"
       - "8025:8025"
 
+  keycloak-db:
+    image: postgres:13
+    container_name: keycloak-db
+    environment:
+      - POSTGRES_DB=keycloak
+      - POSTGRES_USER=keycloak
+      - POSTGRES_PASSWORD=password
+    volumes:
+      - keycloak_postgres_data:/var/lib/postgresql/data
+    deploy:
+      resources:
+        limits:
+          memory: 500m
+
   keycloak:
     image: quay.io/keycloak/keycloak:26.1.0
-    command: [ 'start-dev', '--http-port=9191' ]
+    command:
+      - start-dev
+      - --import-realm
+      - --http-port=9191
     container_name: keycloak
     hostname: keycloak
+    volumes:
+      - ./realm-config:/opt/keycloak/data/import
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin1234
+      - KC_DB=postgres
+      - KC_DB_URL=jdbc:postgresql://keycloak-db:5432/keycloak
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=password
+      - KC_HOSTNAME=localhost
     ports:
       - "9191:9191"
+    depends_on:
+      - keycloak-db
     deploy:
       resources:
         limits:
           memory: 2gb
+
+volumes:
+  keycloak_postgres_data:
