--- a/webapp-bookstore/src/main/resources/application.properties
+++ b/webapp-bookstore/src/main/resources/application.properties
@@ -4,8 +4,9 @@ server.shutdown=graceful
 spring.mvc.problemdetails.enabled=true
 
 ######## BookStore Application Configuration  #########
-bookstore.api-catalog-url=http://localhost:8081
-bookstore.api-orders-url=http://localhost:8082
+#bookstore.api-catalog-url=http://localhost:8081
+#bookstore.api-orders-url=http://localhost:8082
+bookstore.api-gateway-url=http://localhost:8989
 ######## Actuator Configuration  #########
 management.info.git.mode=full
 management.endpoints.web.exposure.include=*
@@ -18,7 +19,7 @@ OAUTH2_SERVER_URL=http://localhost:9191
 REALM_URL=${OAUTH2_SERVER_URL}/realms/bookstore
 
 spring.security.oauth2.client.registration.bookstore-webapp.client-id=bookstore-webapp
-spring.security.oauth2.client.registration.bookstore-webapp.client-secret=2tlzDsc7UsWyeBiuQyfy8yC9tCrqHWRS
+spring.security.oauth2.client.registration.bookstore-webapp.client-secret=RFeT6RecaVG0dN8zDIVnLcBv47k4iSQa
 spring.security.oauth2.client.registration.bookstore-webapp.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.bookstore-webapp.scope=openid, profile
 spring.security.oauth2.client.registration.bookstore-webapp.redirect-uri={baseUrl}/login/oauth2/code/bookstore-webapp
