--- a/deployment/docker-compose/apps.yml
+++ b/deployment/docker-compose/apps.yml
@@ -77,32 +77,31 @@ services:
     labels:
       logging: "promtail"
 
-  api-gateway:
-    image: saisunny16/bookstore-api-gateway
-    container_name: api-gateway
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-      - CATALOG_SERVICE_URL=http://catalog-service:8081
-      - ORDER_SERVICE_URL=http://order-service:8082
-    ports:
-      - "8989:8989"
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    labels:
-      logging: "promtail"
+#  api-gateway:
+#    image: saisunny16/bookstore-api-gateway
+#    container_name: api-gateway
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#      - CATALOG_SERVICE_URL=http://catalog-service:8081
+#      - ORDER_SERVICE_URL=http://order-service:8082
+#    ports:
+#      - "8989:8989"
+#    restart: unless-stopped
+#    deploy:
+#      resources:
+#        limits:
+#          memory: 700m
+#    labels:
+#      logging: "promtail"
 
   webapp-bookstore:
     image: saisunny16/webapp-bookstore
     container_name: webapp-bookstore
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - BOOKSTORE_API_GATEWAY_URL=http://api-gateway:8989
-#      - BOOKSTORE_API_CATALOG_URL=http://catalog-service:8081
-#      - BOOKSTORE_API_ORDERS_URL=http://order-service:8082
-#      - OAUTH2_SERVER_URL=http://keycloak:9191
+      - BOOKSTORE_API_CATALOG_URL=http://catalog-service:8081
+      - BOOKSTORE_API_ORDERS_URL=http://order-service:8082
+      - OAUTH2_SERVER_URL=http://keycloak:9191
     ports:
       - "8080:8080"
     restart: unless-stopped
