--- a/webapp-bookstore/src/main/resources/application.properties
+++ b/webapp-bookstore/src/main/resources/application.properties
@@ -4,9 +4,8 @@ server.shutdown=graceful
 spring.mvc.problemdetails.enabled=true
 
 ######## BookStore Application Configuration  #########
-#bookstore.api-catalog-url=http://localhost:8081
-#bookstore.api-orders-url=http://localhost:8082
-bookstore.api-gateway-url=http://localhost:8989
+bookstore.api-catalog-url=http://localhost:8081
+bookstore.api-orders-url=http://localhost:8082
 ######## Actuator Configuration  #########
 management.info.git.mode=full
 management.endpoints.web.exposure.include=*
