--- a/deployment/docker-compose/prometheus/prometheus.yml
+++ b/deployment/docker-compose/prometheus/prometheus.yml
@@ -28,14 +28,8 @@ scrape_configs:
   static_configs:
     - targets: ['notification-service:8083']
 
-- job_name: 'api-gateway'
-  metrics_path: '/actuator/prometheus'
-  scrape_interval: 5s
-  static_configs:
-    - targets: ['api-gateway:8989']
-
 - job_name: 'bookstore-webapp'
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-    - targets: ['bookstore-webapp:8080']
+    - targets: ['localhost:8080']
