--- a/deployment/docker-compose/prometheus/prometheus.yml
+++ b/deployment/docker-compose/prometheus/prometheus.yml
@@ -14,19 +14,25 @@ scrape_configs:
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-  - targets: ['catalog-service:8081']
+  - targets: ['localhost:8081']
 
 - job_name: 'order-service'
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-    - targets: ['order-service:8082']
+    - targets: ['localhost:8082']
 
 - job_name: 'notification-service'
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-    - targets: ['notification-service:8083']
+    - targets: ['localhost:8083']
+
+- job_name: 'api-gateway'
+  metrics_path: '/actuator/prometheus'
+  scrape_interval: 5s
+  static_configs:
+    - targets: ['api-gateway:8989']
 
 - job_name: 'bookstore-webapp'
   metrics_path: '/actuator/prometheus'
