Tempo Traces chnages

--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -3,6 +3,9 @@ server.port=8081
 server.shutdown=graceful
 management.endpoints.web.exposure.include=* 
 management.info.git.mode=full
+management.metrics.tags.application=${spring.application.name}
+management.tracing.enabled=false
+management.tracing.sampling.probability=1.0
 
 catalog.page-size=10
 
