--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,6 +3,9 @@ server.port=8082
 server.shutdown=graceful
 management.endpoints.web.exposure.include=*
 management.info.git.mode=full
+management.metrics.tags.application=${spring.application.name}
+management.tracing.enabled=false
+management.tracing.sampling.probability=1.0
 
 orders.publish-order-events-job-cron=*/5 * * * * *
 orders.new-orders-job-cron=*/10 * * * * *
