--- a/deployment/docker-compose/prometheus/prometheus.yml
+++ b/deployment/docker-compose/prometheus/prometheus.yml
@@ -14,19 +14,19 @@ scrape_configs:
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-  - targets: ['localhost:8081']
+  - targets: ['catalog-service:8081']
 
 - job_name: 'order-service'
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-    - targets: ['localhost:8082']
+    - targets: ['order-service:8082']
 
 - job_name: 'notification-service'
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-    - targets: ['localhost:8083']
+    - targets: ['notification-service:8083']
 
 - job_name: 'api-gateway'
   metrics_path: '/actuator/prometheus'
@@ -38,4 +38,4 @@ scrape_configs:
   metrics_path: '/actuator/prometheus'
   scrape_interval: 5s
   static_configs:
-    - targets: ['localhost:8080']
+    - targets: ['bookstore-webapp:8080']
