--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -13,3 +13,7 @@ catalog.page-size=10
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:15432/postgres}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
+
+
+spring.redis.host=localhost
+spring.redis.port=6379
